--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <header>
-      <img src="logo.png" alt="logo">
+      <img class="logo" src="logo.png" alt="logo">
       <img src="company-name.png" alt="company name" class="company-name">
   </header>
 
@@ -18,7 +18,7 @@
   <div class="column">
 <!--               register form               -->
 
-    <h2 class="form-name">Register Form<h2>
+    <h2 class="form-name">Register Form</h2>
     <form>
       <div class="back">
         <div class="register front">
@@ -75,8 +75,8 @@
     </form>
 
 <!--               send form               -->
-    <h2 class="form-name">Send Email<h2>
-      <form >
+    <h2 class="form-name">Send Email</h2>
+      <form>
         <div class="back">
           <div class="send front">
             <div class="padding-top">
@@ -114,7 +114,7 @@
 <!--               second column               -->
     <div class="column">
 <!--               sign in form               -->
-<h2 class="form-name">Sign In Form<h2>
+<h2 class="form-name">Sign In Form</h2>
       <form>
           <div class="back">
             <div class="signin front">
@@ -136,7 +136,7 @@
                 <label for="remember" type="checkbox" class="label-desc">Remember me</label>
               </div>
 
-              <div class="button small-btn to-right">
+              <div class="small-btn to-right">
                 <button class="text-btn text-btn-sm" name="button" type="send">Sign In</button>
               </div>
             </div>
@@ -144,7 +144,7 @@
       </form>
 <!--               recover form               -->
 
-    <h2 class="form-name">Recover<h2>
+    <h2 class="form-name">Recover</h2>
       <form>
           <div class="back">
             <div class="recover front">
@@ -161,11 +161,11 @@
                 </div>
               </div>
 
-              <div class="button small-btn to-left">
+              <div class="small-btn to-left">
                 <button class="text-btn text-btn-sm" name="button" type="send">Send</button>
               </div>
 
-              <div class="button small-btn to-right">
+              <div class="small-btn to-right">
                 <button class="text-btn text-btn-sm" name="button" type="send">Done</button>
               </div>
             </div>
@@ -173,7 +173,7 @@
       </form>
 
 <!--               subscribe form               -->
-      <h2 class="form-name">Subscribe<h2>
+      <h2 class="form-name">Subscribe</h2>
       <form>
           <div class="back">
             <div class="subscribe front">
@@ -184,11 +184,11 @@
                 </div>
               </div>
 
-              <div class="button small-btn to-left">
+              <div class="small-btn to-left">
                 <button class="text-btn text-btn-sm" name="button" type="send">Subscribe</button>
               </div>
 
-              <div class="button small-btn red to-right ">
+              <div class="small-btn red to-right">
                 <button class="text-btn text-btn-sm" name="button" type="send">No, Thanks</button>
               </div>
             </div>
@@ -196,7 +196,7 @@
       </form>
 
       <footer>
-        <img src="logo2.png">
+        <img class="logo-last" src="logo2.png">
       </footer>
 
     </div>
